@startuml

title __ADAPTER's Class Diagram__\n

  namespace  {
    namespace om.example.adapter {
      interface com.example.adapter.Adaptee {
      }
    }
  }
  

  namespace  {
    namespace om.example.adapter {
      class com.example.adapter.Adaptor {
      }
    }
  }
  

  namespace  {
    namespace om.example.adapter {
      class com.example.adapter.HelloApplication {
      }
    }
  }
  

  namespace  {
    namespace om.example.adapter {
      class com.example.adapter.HelloController {
      }
    }
  }
  

  namespace  {
    namespace om.example.adapter {
      class com.example.adapter.OrdArray {
      }
    }
  }
  

  com.example.adapter.Adaptor .up.|> com.example.adapter.Adaptee
  com.example.adapter.Adaptor o-- com.example.adapter.OrdArray : ordArray
  com.example.adapter.HelloApplication -up-|> javafx.application.Application
  com.example.adapter.HelloController .up.|> javafx.fxml.Initializable
  com.example.adapter.HelloController o-- com.example.adapter.Adaptor : adaptor


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
